# hanks-lab-to-nwb

./: README.md  make_env.yml  pyproject.toml
.github/workflows/: test-install.yml
src/hanks_lab_to_nwb/: __init__.py
src/hanks_lab_to_nwb/bandit_task/: conversion_notes.md  convert_session.py  metadata.yaml  open_questions.md
src/hanks_lab_to_nwb/converters/: __init__.py  nwbconverter.py
src/hanks_lab_to_nwb/embargo2026/: __init__.py  conversion_notes.md  convert_all_sessions.py  convert_session.py  nwbconverter.py  open_questions.md
src/hanks_lab_to_nwb/embargo2026/metadata/: bandit_task.yaml  fiber_photometry.yaml  wm_task.yaml
src/hanks_lab_to_nwb/hanks_task/: __init__.py  behaviorinterface.py  conversion_notes.md  convert_session.py  metadata.yaml  nwbconverter.py
src/hanks_lab_to_nwb/metadata/: fiber_photometry.yaml
src/hanks_lab_to_nwb/tutorials/: doric_fp_demo.ipynb
src/hanks_lab_to_nwb/utils/: __init__.py  build_metadata.py
src/hanks_lab_to_nwb/wm_task/: conversion_notes.md  convert_session.py  metadata.yaml  open_questions.md
